fixtures/syntax_error/syntax_error.pony
use "collections"
class Actor
  new create() =>
    var arr = Array
unknown_identifier
